@@ -23,12 +23,12 @@
 
 enum {BUTTONLAUNCH=0,BUTTONREMOVE,BUTTONPREFS,BUTTONQUIT,NOMOREBUTONS};
 
-extern LFSTK_windowClass	*launcherContextWindow;
+//extern LFSTK_windowClass	*launcherContextWindow;
 extern LFSTK_windowClass	*taskContextWindow;
 
 void sendClientMessage(Window win,const char *msg,unsigned long data0,unsigned long data1,unsigned long data2,unsigned long data3,unsigned long data4);
 
-bool contextCB(void *p,void* ud);
+//bool contextCB(void *p,void* ud);
 bool gadgetDrop(void *lwc,propertyStruct *data,void* ud);
 bool timerCB(LFSTK_applicationClass *p,void* ud);
 void readMsg(void);
