@@ -45,7 +45,7 @@
 #define MAXTASKBUTTONS 32
 
 enum PANELGRAVITY {PANELNORTH=1,PANELSOUTH=2};
-enum WHATSORT {LAUNCHER=100,DESKTOPSWITCHER,TASKSWITCHER};
+enum WHATSORT {DESKTOPSWITCHER=100,TASKSWITCHER};
 
 struct launcherDataStruct
 {
