@@ -27,10 +27,10 @@
 extern std::vector<launcherDataStruct>	launchersArray;
 extern LFSTK_findClass					*findlaunchers;
 extern LFSTK_gadgetClass					*currentLauncher;
+extern LFSTK_windowClass					*launcherContextWC;
 
-bool launcherEnterCB(LFSTK_gadgetClass*p,void* ud);
-bool launcherExitCB(LFSTK_gadgetClass*p,void* ud);
-bool launcherCB(void *p,void* ud);
-int addLaunchers(int x,int y,int grav);
+bool		launcherCB(void *p,void* ud);
+int		addLaunchers(int x,int y,int grav);
+bool		launcherExitCB(LFSTK_gadgetClass* p,void* ud);
 
 #endif
