@@ -1,4 +1,5 @@
 0.2.0
+fixed random bouncing of launchers.
 Fixed trying to open dock on non existant monitor.
 Added a couple of background examples.
 UI updates.
